--- a/AmbientMonitoring/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AmbientMonitoring/app/src/main/res/layout/fragment_dashboard.xml
@@ -6,127 +6,130 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".view.fragment.DashboardFragment">
 
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:gravity="center_horizontal">
-
-        <TextView
-            android:id="@+id/dashboard_min_temperature_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:gravity="start"
-            android:text="Min: 20ºC"
-            android:textColor="@color/secondary_text" />
-
-        <TextView
-            android:id="@+id/dashboard_max_temperature_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:gravity="end"
-            android:text="Max: 30ºC"
-            android:textColor="@color/secondary_text" />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/dashboard_divider"
-        android:layout_alignParentTop="true"
+        android:id="@+id/dashboard_gauge_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="400dp"
         android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="90dp"
-            android:layout_marginLeft="-20dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/thermometer"
-            android:tint="@color/secondary_text" />
-
-        <TextView
-            android:id="@+id/dashboard_temperature_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="0ºC"
-            android:textSize="60sp" />
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/dashboard_divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_centerInParent="true"
-        android:background="@color/divider" />
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/dashboard_divider"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:gravity="center_horizontal">
-
-        <TextView
-            android:id="@+id/dashboard_min_humidity_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:gravity="start"
-            android:text="Min: 20%"
-            android:textColor="@color/secondary_text" />
-
-        <TextView
-            android:id="@+id/dashboard_max_humidity_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:gravity="end"
-            android:text="Max: 30%"
-            android:textColor="@color/secondary_text" />
-
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@id/dashboard_divider"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
         <ImageView
             android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginLeft="-20dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/humidity"
-            android:tint="@color/secondary_text" />
+            android:layout_height="80dp"
+            android:layout_alignTop="@+id/dashboard_main_circle"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/house"
+            android:tint="@color/primary_text" />
 
+        <ImageView
+            android:id="@+id/dashboard_main_circle"
+            android:layout_width="300dp"
+            android:layout_height="360dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/circle"
+            android:tint="@color/primary_text" />
 
-        <TextView
-            android:id="@+id/dashboard_humidity_text_view"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="0%"
-            android:textColor="@color/secondary_text"
-            android:textSize="60sp" />
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/dashboard_temperature_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="25."
+                android:textColor="@color/primary_text"
+                android:textSize="80sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="7"
+                android:textColor="@color/primary_text"
+                android:textSize="40sp" />
+
+        </LinearLayout>
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:paddingLeft="100dp"
+            android:paddingRight="100dp">
+
+            <ImageView
+                android:id="@+id/dashboard_filled_circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/drop"
+                android:tint="@color/primary_text" />
+
+            <TextView
+                android:id="@+id/dashboard_humidity_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/dashboard_filled_circle"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="18dp"
+                android:text="0%"
+                android:textColor="@color/background"
+                android:textSize="40sp" />
+
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dashboard_gauge_layout"
+        android:layout_marginTop="20dp">
+
+        <!--<ImageView-->
+        <!--android:id="@+id/dashboard_weather_image"-->
+        <!--android:layout_width="70dp"-->
+        <!--android:layout_height="70dp"-->
+        <!--android:scaleType="centerInside"-->
+        <!--android:src="@drawable/filled_circle" />-->
+
+        <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_toRightOf="@id/dashboard_weather_image"-->
+        <!--android:orientation="vertical">-->
+
+
+        <!--<TextView-->
+        <!--android:id="@+id/dashboard_weather_temperature"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="2dp"-->
+        <!--android:text="20ºC"-->
+        <!--android:textSize="22sp" />-->
+
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="2dp"-->
+        <!--android:text="35%"-->
+        <!--android:textSize="22sp" />-->
+        <!--</LinearLayout>-->
+
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
