--- a/AmbientMonitoring/app/src/main/res/layout/fragment_welcome.xml
+++ b/AmbientMonitoring/app/src/main/res/layout/fragment_welcome.xml
@@ -2,68 +2,131 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
     tools:context=".view.fragment.WelcomeFragment">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/welcome_app_logo_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/snowflake"
-            android:tint="@color/primary_dark" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/welcome_app_name_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/welcome_app_logo_image_view"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:text="@string/app_name"
-            android:textColor="@color/primary_dark"
-            android:textSize="34sp" />
+            <ImageView
+                android:id="@+id/welcome_app_logo_image_view"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/house"
+                android:tint="@color/primary_text" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/welcome_app_name_text_view"
-            android:layout_centerHorizontal="true"
-            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/welcome_app_logo_image_view"
+                android:layout_centerHorizontal="true"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="40dp"
+                android:orientation="vertical"
+                android:padding="24dp">
 
-            <EditText
-                android:id="@+id/login_email_edit_text"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
-                android:inputType="textEmailAddress" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp">
 
-            <EditText
-                android:id="@+id/login_password_edit_text"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
-                android:layout_marginTop="10dp"
-                android:inputType="textPassword" />
+                    <ImageView
+                        android:id="@+id/login_email_icon"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_alignBottom="@+id/login_email_edit_text"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginBottom="4dp"
+                        android:src="@drawable/email_icon"
+                        android:tint="@color/primary_text" />
 
-            <Button
-                android:id="@+id/login_button"
-                android:layout_width="125dp"
-                android:layout_height="60dp"
-                android:layout_gravity="right"
-                android:layout_marginTop="20dp"
-                android:backgroundTint="@color/primary_dark"
-                android:text="Login"
-                android:textColor="@android:color/white" />
+                    <EditText
+                        android:id="@+id/login_email_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="32dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="8dp"
+                        android:background="@android:color/transparent"
+                        android:hint="e-mail"
+                        android:inputType="textEmailAddress"
+                        android:paddingBottom="4dp"
+                        android:paddingLeft="40dp" />
 
-        </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:layout_alignLeft="@id/login_email_icon"
+                        android:layout_alignRight="@id/login_email_edit_text"
+                        android:layout_below="@+id/login_email_edit_text"
+                        android:layout_marginTop="3dp"
+                        android:background="@color/secondary_text" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="40dp">
+
+                    <ImageView
+                        android:id="@+id/login_password_icon"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_alignBottom="@+id/login_password_edit_text"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginBottom="4dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/password_icon"
+                        android:tint="@color/primary_text" />
+
+                    <EditText
+                        android:id="@+id/login_password_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="32dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="8dp"
+                        android:background="@android:color/transparent"
+                        android:hint="password"
+                        android:inputType="textPassword"
+                        android:paddingBottom="4dp"
+                        android:paddingLeft="40dp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:layout_alignLeft="@id/login_password_icon"
+                        android:layout_alignRight="@id/login_password_edit_text"
+                        android:layout_below="@+id/login_password_edit_text"
+                        android:layout_marginTop="3dp"
+                        android:background="@color/secondary_text" />
+
+                </RelativeLayout>
 
 
-    </RelativeLayout>
+                <Button
+                    android:id="@+id/login_button"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/circle_button_ripple"
+                    android:elevation="0dp"
+                    android:stateListAnimator="@null"
+                    android:text="Login" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </ScrollView>
 
 
 </FrameLayout>
