--- a/AmbientMonitoring/app/src/main/res/values-v21/styles.xml
+++ b/AmbientMonitoring/app/src/main/res/values-v21/styles.xml
@@ -1,9 +1,41 @@
 <resources>>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="AppTheme" parent="android:Theme.Material">
+        <!-- Customize your theme here. -->
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:colorBackground">@color/background</item>
+        <item name="android:colorAccent">@color/colorButtonNormal</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:navigationBarColor">@color/primary_dark</item>
+        <item name="android:buttonStyle">@style/button</item>
+        <item name="android:editTextStyle">@style/editText</item>
+        <item name="android:colorButtonNormal">@color/colorButtonNormal</item>
+        <item name="colorButtonNormal">@color/colorButtonNormal</item>
+        <item name="colorAccent">@color/accent</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar" parent="AppTheme">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <style name="button" parent="android:style/Widget.Button">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:backgroundTint">#333333</item>
+        <item name="android:textColor">@color/primary_text</item>
+    </style>
+
+    <style name="editText" parent="android:style/Widget.EditText">
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:backgroundTint">@color/secondary_text</item>
+
+    </style>
+
 </resources>
