--- a/AmbientMonitoring/app/src/main/res/values/colors.xml
+++ b/AmbientMonitoring/app/src/main/res/values/colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#03A9F4</color>
-    <color name="primary_dark">#0288D1</color>
+    <color name="primary">#000000</color>
+    <color name="primary_dark">#000000</color>
     <color name="primary_light">#B3E5FC</color>
-    <color name="accent">#FF9800</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#727272</color>
+    <color name="accent">#FFFFFF</color>
+    <color name="primary_text">#FFFFFF</color>
+    <color name="secondary_text">#b3b3b3</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
+    <color name="background">#000000</color>
+    <color name="colorButtonNormal">#333333</color>
+    <color name="measurerColor">#ffa22c</color>
+    <color name="clientColor">#6dcdff</color>
 </resources>
