--- a/AmbientMonitoring/app/src/main/res/layout/fragment_dashboard.xml
+++ b/AmbientMonitoring/app/src/main/res/layout/fragment_dashboard.xml
@@ -43,15 +43,17 @@
                 android:id="@+id/dashboard_temperature_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-thin"
                 android:gravity="center"
-                android:text="25."
+                android:text="-"
                 android:textColor="@color/primary_text"
                 android:textSize="80sp" />
 
             <TextView
+                android:id="@+id/dashboard_temperature_decimal_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="7"
+                android:fontFamily="sans-serif-light"
                 android:textColor="@color/primary_text"
                 android:textSize="40sp" />
 
@@ -79,11 +81,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@id/dashboard_filled_circle"
+                android:layout_alignEnd="@id/dashboard_filled_circle"
+                android:layout_alignStart="@id/dashboard_filled_circle"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="18dp"
-                android:text="0%"
+                android:layout_marginBottom="25dp"
+                android:gravity="center"
+                android:lines="1"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:text="-"
                 android:textColor="@color/background"
-                android:textSize="40sp" />
+                android:textSize="60sp" />
 
 
         </RelativeLayout>
@@ -111,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
-            android:text="Unknown city"
+            android:text="Loading..."
             android:textColor="@color/primary_text"
             android:textSize="18sp" />
 
