--- a/AmbientMonitoring/app/src/main/res/values/colors.xml
+++ b/AmbientMonitoring/app/src/main/res/values/colors.xml
@@ -12,4 +12,11 @@
     <color name="divider">@color/colorButtonNormal</color>
     <color name="measurerColor">#ffa22c</color>
     <color name="clientColor">#6dcdff</color>
+
+    <color name="hot_color">#F77015</color>
+    <color name="normal_color">#FFFFFF</color>
+    <color name="cold_color">#B2ECFF</color>
+    <color name="dry_color">#FFD373</color>
+    <color name="wet_color">#02A9FF</color>
+
 </resources>
