--- a/AmbientMonitoring/app/src/main/res/layout/fragment_rooms.xml
+++ b/AmbientMonitoring/app/src/main/res/layout/fragment_rooms.xml
@@ -1,14 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.fragment.RoomsFragment">
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/rooms_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@color/divider"
-        android:dividerHeight="0.5dp"/>
+        android:dividerHeight="0.5dp" />
 
 </FrameLayout>
