--- a/AmbientMonitoring/app/src/main/res/layout/fragment_rooms_measures.xml
+++ b/AmbientMonitoring/app/src/main/res/layout/fragment_rooms_measures.xml
@@ -1,8 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.fragment.RoomsMeasuresFragment">
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/rooms_list_view"
