Fixing the service and adding the action to the settings button

--- a/AmbientMonitoring/app/src/main/res/menu/menu_rooms.xml
+++ b/AmbientMonitoring/app/src/main/res/menu/menu_rooms.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_favorite"
+        android:id="@+id/action_settings"
         android:icon="@drawable/settings"
         android:showAsAction="ifRoom"
         android:title="Profile" />
