Fixing backstack cycle.

--- a/AmbientMonitoring/app/src/main/res/layout/fragment_settings.xml
+++ b/AmbientMonitoring/app/src/main/res/layout/fragment_settings.xml
@@ -4,4 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.dev.thiago.ambientmonitoring.view.fragment.SettingsFragment">
 
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
+
 </FrameLayout>
